immich/server/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-server
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
  template:
    metadata:
      labels:
    spec:
      # immich stores photos directly on pi2's filesystem
      nodeSelector:
        kubernetes.io/hostname: pi2
      securityContext:
        # uid=1001(immich) gid=1001(immich) groups=1001(immich)
        fsGroup: 1001
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server
          startupProbe:
            periodSeconds: 10
            failureThreshold: 60
            httpGet:
              port: http
              path: /api/server/ping
          livenessProbe:
            httpGet:
              port: http
              path: /api/server/ping
          readinessProbe:
            httpGet:
              port: http
              path: /api/server/ping
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
          ports:
            - name: http
              containerPort: 2283
            - name: server-metrics
              containerPort: 8081
            - name: jobs-metrics
              containerPort: 8082
      volumes:
        - name: library
          hostPath:
            path: /home/immich/immich-library
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 2283
      targetPort: http
    - name: server-metrics
      port: 8081
      targetPort: server-metrics
    - name: jobs-metrics
      port: 8082
      targetPort: jobs-metrics
  selector:
