immich/server/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`immich.fritz.box`)
    services:
    - name: immich-server
      port: 2283
